fix layout breakpoint

--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -20,7 +20,7 @@
       height: 78px;
     }
   }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1280px) {
     background-image: url('/images/contacts/contacts-fon-1x.png');
     background-position-y: 102px;
     background-repeat: no-repeat;
@@ -36,7 +36,7 @@
   @media screen and (min-width: 768px) {
     padding: 0 36px;
   }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1280px) {
     padding: 0 115px;
   }
 }
@@ -66,7 +66,7 @@
     align-items: stretch;
     flex-grow: 0;
   }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1280px) {
     margin-bottom: 86px;
   }
 }
@@ -104,7 +104,7 @@
       }
     }
   
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: 1280px) {
       flex-basis: calc((100% - 62px) / 3);
       width: auto;
       margin-right: 20px;
@@ -160,7 +160,7 @@
       font-size: 14px;
       line-height: 26px;
     }
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: 1280px) {
       font-size: 16px;
       line-height: 30px;
     }
@@ -174,7 +174,7 @@
       font-size: 14px;
       line-height: 23px;
     }
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: 1280px) {
       font-size: 16px;
       line-height: 30px;
     }
@@ -187,7 +187,7 @@
       font-size: 14px;
       line-height: 26px;
     }
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: 1280px) {
       font-size: 16px;
       line-height: 30px;
     }
@@ -203,7 +203,7 @@
       font-size: 14px;
       line-height: 26px;
     }
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: 1280px) {
       font-size: 16px;
       line-height: 30px;
     }
@@ -220,7 +220,7 @@
       font-size: 14px;
       line-height: 26px;
     }
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: 1280px) {
       font-size: 16px;
       line-height: 30px;
     }
@@ -235,7 +235,7 @@
       justify-content: center;
       align-items: center;
     }
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: 1280px) {
       margin-bottom: 165px;
     }
   }
@@ -262,7 +262,7 @@
     font-size: 14px;
     line-height: 26px;
   }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1280px) {
     font-size: 16px;
     line-height: 30px;
   }
@@ -277,7 +277,7 @@
     justify-content: center;
     align-items: center;
   }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1280px) {
     padding-bottom: 165px;
   }
 }
@@ -292,11 +292,11 @@
   line-height: 21px;
   font-style: normal;
   margin: 0 auto;
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
+  @media screen and (min-width: 768px) {
     margin: 0 15px 0 0;
     width: 191px;
   }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1280px) {
     width: 198px;
     margin: 0 15px 0 0;
   }
